--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                         </p>
 
                         <ul class="about-us__box-list">
-                            <li class="box-list__item"><input type="checkbox" checked>We providing compe quality for packed with elated different.</li>
-                            <li class="box-list__item"><input type="checkbox" checked>We are one of compelling quality for packed with leading.</li>
-                            <li class="box-list__item"><input type="checkbox" checked>Learn how compelling quality for packed with elated grow.</li>
+                            <li class="box-list__item"><input type="checkbox" checked disabled>We providing compe quality for packed with elated different.</li>
+                            <li class="box-list__item"><input type="checkbox" checked disabled>We are one of compelling quality for packed with leading.</li>
+                            <li class="box-list__item"><input type="checkbox" checked disabled>Learn how compelling quality for packed with elated grow.</li>
                         </ul>
 
                         <div class="about-us__content-statistics">
